<resources>

    <string name="app_name">EUS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Số Điện Thoại</string>
    <string name="password">Mật Khẩu</string>
    <string name="Login">Đăng Nhập</string>
    <string name="google">Google</string>
    <string name="Register">Đăng Ký</string>
    <string name="Forget">Quên mật khẩu </string>
    <string name="OTP">Nhập OTP </string>
    <string name="Confirm">Xác nhận</string>
    <string name="New_Password">Nhập mật khẩu </string>
    <string name="New_Password_again">Nhập lại mật </string>
    <string name="DefaultButton">Button</string>
    <string name="two">Two</string>
    <string name="one">One</string>
    <string name="nameDefault">Thánh Bú Liếm</string>
    <string name="DefaultMail">....@gmail.com</string>
    <string name="search">Tim Kiếm</string>
    <string name="profile">Cá Nhân</string>
    <string name="cart">Giỏ Hàng</string>
    <string name="Home">Trang Chủ</string>
    <string name="Send">Gửi</string>
    <string name="verification">Xác thực OTP</string>
    <string name="change_password">Đổi Mật Khẩu</string>
    <string name="password_again">Nhập lại mật khẩu</string>
    <string name="logout">Đăng Xuất</string>
    <string name="DefailtProduct">Điện thoại IPhone 13 Pro Mã 256 GB - Hàng Chính Hãng</string>
    <string name="Price">36.990.000đ</string>
    <string name="Detail">Thông Tin Chi Tiết</string>
    <string name="DetailHeader">Danh Muc</string>
    <string name="DetailProduct">Thông Tin Chi Tiết Sản Phẩm</string>
    <string name="Description">Mô tả</string>
    <string name="AddCart">Thêm Giỏ hàng</string>
    <string name="Chat">Trò Chuyện</string>
    <string name="Total_Price">Tổng Cộng</string>
    <string name="Buy">Mua Hàng</string>
    <string name="Delete">Xoá</string>
    <string name="titlePrice">Tổng Tiền</string>
    <string name="payment">Thanh Toán</string>

</resources>