<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/itemCart"
        android:title="@string/cart"
        app:actionLayout="@layout/action_bar_notifitcation_icon"
        android:icon="@drawable/ic_cart"
        app:showAsAction="always"
    />


    <item
        android:id="@+id/itemProfile"
        android:title="@string/profile"
        android:icon="@drawable/ic_account"
        app:showAsAction="ifRoom"
        />


</menu>
