<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.eus.ViewLogin.LoginFragment"
        android:label="@string/Login"
        tools:layout="@layout/fragment_login"
        >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_forgetFragment"
            app:destination="@id/forgetFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.eus.ViewRegister.RegisterFragment"
        android:label="@string/Register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/forgetFragment"
        android:name="com.example.eus.ViewForget.ForgetFragment"
        android:label="@string/Forget"
        tools:layout="@layout/fragment_forget" >
        <action
            android:id="@+id/action_forgetFragment_to_verificationFragment"
            app:destination="@id/verificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.eus.ViewProfile.ProfileFragment"
        android:label="Thông Tin Cá Nhân"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.eus.ViewHome.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_homeFragment_to_listTypeProductFragment"
            app:destination="@id/listTypeProductFragment" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/listTypeProductFragment"
        android:name="com.example.eus.ViewListType.ListTypeProductFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_list_type_product" >
        <action
            android:id="@+id/action_listTypeProductFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="Nothing" />
        <action
            android:id="@+id/action_listTypeProductFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/verificationFragment"
        android:name="com.example.eus.ViewForget.VerificationFragment"
        android:label="@string/verification"
        tools:layout="@layout/fragment_verification" >
        <action
            android:id="@+id/action_verificationFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.example.eus.ViewForget.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" >
        <action
            android:id="@+id/action_changePasswordFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.eus.ViewDetail.DetailFragment"
        android:label="@string/DetailProduct"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="productDetail"
            app:argType="com.example.eus.ODT.Product"
            app:nullable="true" />
        <action
            android:id="@+id/action_detailFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.eus.ViewCart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.eus.viewPayment.PaymentFragment"
        android:label="@string/payment"
        tools:layout="@layout/fragment_payment" >
        <action
            android:id="@+id/action_paymentFragment_to_changInfoFragment"
            app:destination="@id/changInfoFragment" />
        <action
            android:id="@+id/action_paymentFragment_to_changePaymentFragment"
            app:destination="@id/changePaymentFragment" />
        <argument
            android:name="ListProduct"
            app:argType="com.example.eus.ODT.Product[]"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/changInfoFragment"
        android:name="com.example.eus.viewPayment.ChangeInfoFragment"
        android:label="Thông Tin"
        tools:layout="@layout/fragment_chang_info" >
        <action
            android:id="@+id/action_changInfoFragment_to_addInfoFragment"
            app:destination="@id/addInfoFragment" />
        <argument
            android:name="shipInfo"
            app:argType="com.example.eus.ODT.ShipInfo" />
        <action
            android:id="@+id/action_changInfoFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePaymentFragment"
        android:name="com.example.eus.viewPayment.ChangePaymentFragment"
        android:label="Phương Thức Thanh Toán"
        tools:layout="@layout/fragment_change_payment" />
    <fragment
        android:id="@+id/addInfoFragment"
        android:name="com.example.eus.viewPayment.AddInfoFragment"
        android:label="Thêm Địa Chỉ"
        tools:layout="@layout/fragment_add_info">
        <action
            android:id="@+id/action_addInfoFragment_to_changInfoFragment"
            app:destination="@id/changInfoFragment" />
    </fragment>
</navigation>